# SentinelForge

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: critical.yaml  default.yaml  homelab.yaml  production.yaml
data/: sample_logs.txt  threat_db.json
docker/: Dockerfile
scripts/: setup_linux.sh  setup_windows.ps1
src/sentinelforge/: __init__.py  cli.py
src/sentinelforge/agents/: __init__.py  base.py  containment.py  explainer.py  guardian.py  investigator.py  monitor.py  responder.py
src/sentinelforge/api/: __init__.py  server.py
src/sentinelforge/connectors/: __init__.py  siem.py  threat_intel.py
src/sentinelforge/core/: __init__.py  alerting.py  audit.py  auth.py  config.py  database.py  executors.py  guardrails.py  health.py  knowledge.py  llm.py  logging.py  models.py  orchestrator.py  safety.py  secrets.py
src/sentinelforge/dashboard/: __init__.py  app.py
src/sentinelforge/evaluation/: __init__.py  harness.py
src/sentinelforge/knowledge/: __init__.py  vector_store.py
src/sentinelforge/monitoring/: file_integrity.py  network.py  windows_events.py
src/sentinelforge/simulation/: __init__.py  scenarios.py
tests/: test_agents.py  test_alerting.py  test_api.py  test_audit.py  test_auth.py  test_executors.py  test_guardrails.py  test_health.py  test_integration.py  test_llm.py  test_monitoring.py  test_safety.py
