[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinelforge"
version = "0.4.0"
description = "Autonomous AI Cyber Defense Agent Framework — LangGraph-powered SOC automation with constitutional safety guardrails"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Sagesh Adhikari", email = "sageshadhikari@gmail.com" }]
keywords = ["cybersecurity", "ai-agents", "defense", "soc", "threat-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "httpx>=0.27.0",
    "scapy>=2.6.0",
    "psutil>=6.0",
    "cryptography>=43.0",
    "python-dateutil>=2.9",
    "jinja2>=3.1",
    "rich>=13.0",
    "PyJWT>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.39.0", "plotly>=5.24.0"]
ollama = ["langchain-ollama>=0.2.0"]
anthropic = ["langchain-anthropic>=0.3.0"]
openai = ["langchain-openai>=0.2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.7.0", "mypy>=1.12"]
all = ["sentinelforge[dashboard,ollama,anthropic,openai,dev]"]

[project.scripts]
sentinelforge = "sentinelforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinelforge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]

[tool.ruff.lint.per-file-ignores]
"src/sentinelforge/api/server.py" = ["B008", "E501"]
"src/sentinelforge/core/knowledge.py" = ["E501"]
"src/sentinelforge/core/safety.py" = ["E501"]
"src/sentinelforge/core/config.py" = ["E501", "S104", "S105"]
"src/sentinelforge/core/executors.py" = ["E501", "S603"]
"src/sentinelforge/core/guardrails.py" = ["E501"]
"src/sentinelforge/core/alerting.py" = ["E501", "S104"]
"src/sentinelforge/core/database.py" = ["E501"]
"src/sentinelforge/agents/explainer.py" = ["E501"]
"src/sentinelforge/agents/monitor.py" = ["E501"]
"src/sentinelforge/dashboard/app.py" = ["E501"]
"src/sentinelforge/cli.py" = ["E501", "S104"]
"src/sentinelforge/evaluation/harness.py" = ["E501"]
"tests/*.py" = ["S101", "S104", "S106", "S108", "E501"]
"src/sentinelforge/core/models.py" = ["E501"]
"src/sentinelforge/knowledge/vector_store.py" = ["E501"]
"src/sentinelforge/monitoring/*.py" = ["E501"]
"src/sentinelforge/simulation/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
